# kmDelta

./: .gitignore  CMakeLists.txt  Charttextview.qml  ChatW.qml  CondLine.qml  ControlP.qml  Double_rect.qml  Double_rect2.qml  Double_rect3.qml  Double_rect4.qml  IP_Addr.qml  IP_Addr2.qml  README.md  chat.cpp  chat.h  configs.cpp  configs.h  controlip.cpp  controlip.h  crc32.cpp  crc32.h  git_parole.txt  howTo.txt  ipAddr.cpp  ipAddr.h  kmdelta6  main.cpp  main.qml  main2.cpp  main2.qml  main3.cpp  main3.qml  mbtcpClient.cpp  mbtcpClient.h  messageBox.qml  messbox.h  pTmrIntrfc.h  pointtimer.cpp  pointtimer.h  qml.qrc  (+11 more)
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
.qt/deploy_qml_imports/: kmdelta6.cmake
.qt_plugins/: Qt6_QmlPlugins_Imports_kmdelta6.cmake  Qt6_QmlPlugins_Imports_kmdelta6.rsp
inc/: chat.h  configs.h  controlip.h  mbtcpClient.h  messbox.h  mvConfigs.h  pointtimer.h  tcpIntrfc.h  tcp_req.h  vmConfigsChat.h
kmdelta6_autogen/: moc_predefs.h  mocs_compilation.cpp
kmdelta6_autogen/EWIEGA46WW/: moc_ipAddr.cpp  moc_mbtcpClient.cpp  moc_pTmrIntrfc.cpp  moc_pointtimer.cpp  moc_tcpIntrfc.cpp  moc_vmConfigsChat.cpp  qrc_qml.cpp
qml/: ChatW.qml  ChatW_5.qml  CondLine.qml  CondLine_5.qml  ControlP.qml  ControlP_5.qml  IP_Addr2.qml  IP_Addr_5.qml  main.qml  main_5.qml  qml_5.qrc
src/: chat.cpp  configs.cpp  controlip.cpp  ipAddr.cpp  main.cpp  main2.cpp  mbtcpClient.cpp  messbox.cpp  mvConfigs.cpp  pointtimer.cpp  tcpIntrfc.cpp  tcp_exch.cpp  vmConfigs.cpp  vmConfigsChat.cpp
